objects/SPM_AccountMVendor_Program__c.object
<CustomObject>
    <fields>
        <fullName>AccountMVendor_ID__c</fullName>
        <description>AccountMVendor ID</description>
        <inlineHelpText>AccountMVendor ID</inlineHelpText>
        <label>AccountMVendor ID</label>
        <referenceTo>SPM_PVendor_MVendor__c</referenceTo>
        <relationshipLabel>MVendor Program Coverage</relationshipLabel>
        <relationshipName>MVendor_Program_Coverage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Sales__c</fullName>
        <formula>Program_ID__r.Actual_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Sales ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Merchant</description>
        <inlineHelpText>Merchant</inlineHelpText>
        <label>Merchant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MVendor_Program_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program ID</description>
        <inlineHelpText>Program ID</inlineHelpText>
        <label>Program ID</label>
        <referenceTo>SPM_Account_Program__c</referenceTo>
        <relationshipLabel>MVendor Program Coverage</relationshipLabel>
        <relationshipName>MVendor_Program_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Program_ID__r.Service_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Score_Last_Quarter__c</fullName>
        <formula>Program_ID__r.SBI_Score_Last_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBI Score - Last Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>